monitoring/grafana/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  replicas: 1
  strategy: {type: Recreate}

  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      containers:
        - name: grafana
          image: grafana
          ports:
            - { name: http, containerPort: 3000 }
          volumeMounts:
            - name: provision-datasources
              mountPath: /etc/grafana/provisioning/datasources/homelab-datasources.yml
              subPath: homelab-datasources.yml
              readOnly: true
            - name: provision-dashboard-providers
              mountPath: /etc/grafana/provisioning/dashboards/homelab-dashboards.yml
              subPath: homelab-dashboards.yml
              readOnly: true
            - name: provision-dashboards-homelab
              mountPath: /etc/grafana/provisioning/dashboards/homelab
              readOnly: true
            - name: data
              mountPath: /var/lib/grafana

          resources:
            requests: { cpu: 10m, memory: 256Mi }
            limits: { cpu: 1000m, memory: 512Mi }

          readinessProbe:
            failureThreshold: 10
            httpGet: {path: /robots.txt, port: 3000, scheme: HTTP}
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            tcpSocket: { port: 3000 }
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: provision-datasources
          configMap:
            name: grafana-providers-cm
            items: [{key: homelab-datasources.yml, path: homelab-datasources.yml}]
        - name: provision-dashboard-providers
          configMap:
            name: grafana-providers-cm
            items: [{key: homelab-dashboards.yml, path: homelab-dashboards.yml}]
        - name: provision-dashboards-homelab
          configMap:
            name: grafana-dashboards-homelab-cm
        - name: data
          persistentVolumeClaim: {claimName: grafana-data-pvc}
      securityContext:
        fsGroup: 472
        supplementalGroups: [0]
