monitoring/grafana/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: admire.mon.enorme.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: grafana, port: { name: http } }
  tls:
  # use default TLS certificate
  - hosts:
    - '*.mon.enorme.uk'

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [admire.mon.enorme.uk]
  rules:
    - backendRefs:
       - name: grafana
         port: 3000
